--- a/fivem_11_10_2024/public/styles/chatbox.css
+++ b/fivem_11_10_2024/public/styles/chatbox.css
@@ -23,6 +23,7 @@ nav {
     display: flex;
     align-items: center;
     padding: 0 1rem;
+    height: 60px; /* Hauteur fixe pour la navbar */
 }
 
 .logo {
@@ -35,10 +36,13 @@ nav ul {
     display: flex;
     list-style: none;
     margin-left: auto;
+    height: 100%; /* Prend toute la hauteur de la navbar */
 }
 
 nav ul li {
     margin: 0 0.5rem;
+    display: flex;
+    align-items: center; /* Centre verticalement */
 }
 
 nav ul li a {
